force-app/main/default/objects/Quote/fields/Account_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Billing Account</label>
    <referenceTo>AccountBillingAccount</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>