force-app/main/default/objects/Quote/fields/ALE__c.field-meta.xml
<CustomField>
    <fullName>ALE__c</fullName>
    <formula>Subtotal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>