force-app/main/default/objects/Quote/fields/Amendment_ARR_Impact__c.field-meta.xml
<CustomField>
    <fullName>Amendment_ARR_Impact__c</fullName>
    <description>The impact of this amendment on the contract&apos;s Annual Recurring Revenue. Positive values indicate upsells, negative values indicate downsells or cancellations.</description>
    <inlineHelpText>Enter the ARR change resulting from this amendment. Use positive for increases, negative for decreases.</inlineHelpText>
    <label>Amendment ARR Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>