force-app/main/default/objects/Quote/fields/Amendment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Effective_Date__c</fullName>
    <description>The date when this amendment takes effect. For co-terminating amendments, billing may be adjusted based on this date and the original contract end date.</description>
    <inlineHelpText>Enter the date when this amendment should take effect.</inlineHelpText>
    <label>Amendment Effective Date</label>
    <type>Date</type>
</CustomField>