force-app/main/default/objects/Quote/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <description>Reason for the contract amendment. Used to categorize amendment type and control workflow routing.</description>
    <inlineHelpText>Select the primary reason for this amendment to the original contract.</inlineHelpText>
    <label>Amendment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Cross-sell</fullName>
            </value>
            <value>
                <fullName>Downsell</fullName>
            </value>
            <value>
                <fullName>Full Cancellation</fullName>
            </value>
            <value>
                <fullName>Withholding Tax</fullName>
            </value>
            <value>
                <fullName>Billing Correction</fullName>
            </value>
            <value>
                <fullName>Partner Change</fullName>
            </value>
            <value>
                <fullName>Currency Change</fullName>
            </value>
            <value>
                <fullName>Billing Entity Change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>