force-app/main/default/objects/Quote/fields/Amendment_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Request_Date__c</fullName>
    <description>Date when the amendment was requested by the customer or internal team.</description>
    <inlineHelpText>Enter the date when this amendment was originally requested.</inlineHelpText>
    <label>Amendment Request Date</label>
    <type>Date</type>
</CustomField>