force-app/main/default/objects/Quote/fields/Annual_Contract_Value_ACV__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value_ACV__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Contract Value (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>