force-app/main/default/objects/Quote/fields/Annual_Revenue_Base_old__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Base_old__c</fullName>
    <description>Value of the Annual Revenue in base currency.</description>
    <label>Annual Revenue (Base) old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>