force-app/main/default/objects/Quote/fields/Annualized_License_Equivalent_Base__c.field-meta.xml
<CustomField>
    <fullName>Annualized_License_Equivalent_Base__c</fullName>
    <formula>Subtotal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized License Equivalent (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>