force-app/main/default/objects/Quote/fields/Annuial_Revenue_Base__c.field-meta.xml
<CustomField>
    <fullName>Annuial_Revenue_Base__c</fullName>
    <formula>Subtotal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annuial Revenue (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>