force-app/main/default/objects/Quote/fields/Approval_Justification__c.field-meta.xml
<CustomField>
    <fullName>Approval_Justification__c</fullName>
    <inlineHelpText>Used to justify any approvals or discounts. This will be sent in the approval emails.</inlineHelpText>
    <label>Approval Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>