force-app/main/default/objects/Quote/fields/Approval_Rejected_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejected_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Rejected Checkbox</label>
    <type>Checkbox</type>
</CustomField>