force-app/main/default/objects/Quote/fields/Auto_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Invoice_Date__c</fullName>
    <description>Date the invoice was actually sent to customer (return from Workday). Not needed on Quote.</description>
    <label>Auto Invoice Date</label>
    <type>Date</type>
</CustomField>