force-app/main/default/objects/Quote/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a Quote is to auto-renew.</description>
    <label>Auto Renewal?</label>
    <type>Checkbox</type>
</CustomField>