force-app/main/default/objects/Quote/fields/AWS_Marketplace_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace_Agreement_ID__c</fullName>
    <label>AWS Marketplace Agreement ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>