force-app/main/default/objects/Quote/fields/BDR__c.field-meta.xml
<CustomField>
    <fullName>BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to track the Business Development Representative. (User) Generated at Opp. May not be required on Quote. Used to calculate sales commissions.</description>
    <label>BDR</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (BDR)</relationshipLabel>
    <relationshipName>Quotes_BDR</relationshipName>
    <type>Lookup</type>
</CustomField>