force-app/main/default/objects/Quote/fields/Bill_To_Place__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the billing address place for this quote</description>
    <inlineHelpText>Select the place where invoices should be sent for this quote</inlineHelpText>
    <label>Bill To Place</label>
    <referenceTo>Places__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>