force-app/main/default/objects/Quote/fields/Billing_Partner__c.field-meta.xml
<CustomField>
    <fullName>Billing_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The billing partner for this quote. Used to determine partner pricing.</description>
    <inlineHelpText>Select the billing partner for this quote.</inlineHelpText>
    <label>Billing Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Billing Partner)</relationshipLabel>
    <relationshipName>Quotes_Billing_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>