force-app/main/default/objects/Quote/fields/Channel_MSP_Pricing_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Channel_MSP_Pricing_Discount_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel/MSP Pricing Discount Approval</label>
    <type>Checkbox</type>
</CustomField>