force-app/main/default/objects/Quote/fields/COLA__c.field-meta.xml
<CustomField>
    <fullName>COLA__c</fullName>
    <label>COLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>