force-app/main/default/objects/Quote/fields/COLA_Override_Percent__c.field-meta.xml
<CustomField>
    <fullName>COLA_Override_Percent__c</fullName>
    <description>Quote-level COLA override percentage. When set, this overrides CMDT and Contract-level COLA rates for all lines on this Quote.</description>
    <inlineHelpText>Enter a COLA override percentage for this entire Quote (overrides CMDT and Contract-level rates).</inlineHelpText>
    <label>COLA Override Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>