force-app/main/default/objects/Quote/fields/Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Notes__c</fullName>
    <description>Still required --subject to compliance solution definition.</description>
    <label>Compliance Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>