force-app/main/default/objects/Quote/fields/Contains_Offensive_Security__c.field-meta.xml
<CustomField>
    <fullName>Contains_Offensive_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Still required --subject to compliance solution definition.</description>
    <label>Contains Offensive Security</label>
    <type>Checkbox</type>
</CustomField>