force-app/main/default/objects/Quote/fields/Corporate_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Currency_Amount__c</fullName>
    <formula>CURRENCYRATE(&quot;USD&quot;) *  TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>