force-app/main/default/objects/Quote/fields/Create_Order_from_Quote__c.field-meta.xml
<CustomField>
    <fullName>Create_Order_from_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Order from Quote</label>
    <type>Checkbox</type>
</CustomField>