force-app/main/default/objects/Quote/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <description>Credit amount to be issued for downgrades or cancellations. Typically calculated based on remaining contract term and pro-ration method.</description>
    <inlineHelpText>Enter the credit amount to be issued to the customer for this downgrade or cancellation.</inlineHelpText>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>