force-app/main/default/objects/Quote/fields/Credit_Renewal_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Renewal_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Renewal Approval</label>
    <type>Checkbox</type>
</CustomField>