force-app/main/default/objects/Quote/fields/Credit_Renewal_ARR__c.field-meta.xml
<CustomField>
    <fullName>Credit_Renewal_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Renewal ARR?</label>
    <type>Checkbox</type>
</CustomField>