force-app/main/default/objects/Quote/fields/Credit_Renewal_ARR_Justification__c.field-meta.xml
<CustomField>
    <fullName>Credit_Renewal_ARR_Justification__c</fullName>
    <label>Credit Renewal ARR Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>