force-app/main/default/objects/Quote/fields/Cross_Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sale_Type__c</fullName>
    <label>Cross Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>HARP</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>