force-app/main/default/objects/Quote/fields/Days_Until_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Renewal__c</fullName>
    <description>Number of days remaining until the original contract end date. Used to determine if the quote is within the 120-day renewal window.</description>
    <formula>Renewal_Contract__r.EndDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days remaining until the original contract expires.</inlineHelpText>
    <label>Days Until Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>