force-app/main/default/objects/Quote/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor - Channel Originated</fullName>
            </value>
            <value>
                <fullName>Distributor - Fortra Originated</fullName>
            </value>
            <value>
                <fullName>Reseller - Channel Originated</fullName>
            </value>
            <value>
                <fullName>Reseller - Fortra Originated</fullName>
            </value>
            <value>
                <fullName>Fortra Originated</fullName>
            </value>
            <value>
                <fullName>Reseller - Partner Originated</fullName>
            </value>
            <value>
                <fullName>Distributor - Partner Originated</fullName>
                <isActive>false</isActive>
                <label>Distributor - Partner Originated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>