force-app/main/default/objects/Quote/fields/Disable_Export_Control__c.field-meta.xml
<CustomField>
    <fullName>Disable_Export_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override export control and allow this quote to activate even if requirements are not met.</description>
    <label>Disable Export Control</label>
    <type>Checkbox</type>
</CustomField>