force-app/main/default/objects/Quote/fields/Discount_Renewal_ARR__c.field-meta.xml
<CustomField>
    <fullName>Discount_Renewal_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Renewal ARR?</label>
    <type>Checkbox</type>
</CustomField>