force-app/main/default/objects/Quote/fields/Discount_Renewal_ARR_Justification__c.field-meta.xml
<CustomField>
    <fullName>Discount_Renewal_ARR_Justification__c</fullName>
    <label>Discount Renewal ARR Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>