force-app/main/default/objects/Quote/fields/Discount_Renewal_ARR_Request__c.field-meta.xml
<CustomField>
    <fullName>Discount_Renewal_ARR_Request__c</fullName>
    <label>Discount Renewal ARR Request</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>