force-app/main/default/objects/Quote/fields/DiscountApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>DiscountApprovalStatus__c</fullName>
    <description>Status of discount approval request</description>
    <inlineHelpText>Status of discount approval request</inlineHelpText>
    <label>Discount Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>