force-app/main/default/objects/Quote/fields/DiscountApprover__c.field-meta.xml
<CustomField>
    <fullName>DiscountApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who approved the discount exception</description>
    <inlineHelpText>User who approved the discount exception</inlineHelpText>
    <label>Discount Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Discount Approver)</relationshipLabel>
    <relationshipName>Quotes_Discount_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>