force-app/main/default/objects/Quote/fields/Displaced_ARR__c.field-meta.xml
<CustomField>
    <fullName>Displaced_ARR__c</fullName>
    <label>Displaced ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>