force-app/main/default/objects/Quote/fields/Displaced_ARR_Approval__c.field-meta.xml
<CustomField>
    <fullName>Displaced_ARR_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Displaced ARR Approval</label>
    <type>Checkbox</type>
</CustomField>