force-app/main/default/objects/Quote/fields/Displaced_ARR_Justification__c.field-meta.xml
<CustomField>
    <fullName>Displaced_ARR_Justification__c</fullName>
    <label>Displaced ARR Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>