force-app/main/default/objects/Quote/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The distributor partner for this quote. Participates in Guaranteed Margin pricing.</description>
    <inlineHelpText>Select the distributor partner if applicable.</inlineHelpText>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not match the filter criteria. The selected account must be marked as Partner.</errorMessage>
        <filterItems>
            <field>Account.Partner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Distributor)</relationshipLabel>
    <relationshipName>Quotes_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>