force-app/main/default/objects/Quote/fields/Editable_T_C__c.field-meta.xml
<CustomField>
    <fullName>Editable_T_C__c</fullName>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>