force-app/main/default/objects/Quote/fields/End_User_Place__c.field-meta.xml
<CustomField>
    <fullName>End_User_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the end user&apos;s primary place</description>
    <inlineHelpText>Select the primary place of the end user for this quote</inlineHelpText>
    <label>End User Place</label>
    <referenceTo>Places__c</referenceTo>
    <relationshipLabel>Quotes (End User Place)</relationshipLabel>
    <relationshipName>Quotes4</relationshipName>
    <type>Lookup</type>
</CustomField>