force-app/main/default/objects/Quote/fields/Exchange_Rate_To_USD__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_To_USD__c</fullName>
    <formula>Opportunity.Exchange_Rate_To_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange Rate To USD</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>