force-app/main/default/objects/Quote/fields/Export_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Export_Compliance_Status__c</fullName>
    <description>Still required --subject to compliance solution definition.</description>
    <label>Export Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>