force-app/main/default/objects/Quote/fields/Export_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Export_License_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Still required --subject to compliance solution definition.</description>
    <label>Export License Required</label>
    <type>Checkbox</type>
</CustomField>