force-app/main/default/objects/Quote/fields/GSW__c.field-meta.xml
<CustomField>
    <fullName>GSW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Account and Quote are subject to GSW (government) pricing.  Used by pricing procedure to apply GSW discount to List Price.</description>
    <label>GSW</label>
    <type>Checkbox</type>
</CustomField>