force-app/main/default/objects/Quote/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional reference to Hardware__c record associated with this quote. Used in hardware-first workflow to link the quote to specific hardware and enable hardware-driven product eligibility filtering and pricing calculations.</description>
    <inlineHelpText>Hardware record driving product eligibility and pricing for this quote. Selected in hardware-first workflow by Power team.</inlineHelpText>
    <label>Hardware</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>