force-app/main/default/objects/Quote/fields/Header_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Header_Discount_Type__c</fullName>
    <label>Header Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
                <label>Target Amount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>