force-app/main/default/objects/Quote/fields/Header_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Header_Discount_Value__c</fullName>
    <label>Header Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>