force-app/main/default/objects/Quote/fields/Header_Distribution_Logic__c.field-meta.xml
<CustomField>
    <fullName>Header_Distribution_Logic__c</fullName>
    <label>Header Distribution Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal</fullName>
            </value>
            <value>
                <fullName>Proportionate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>