force-app/main/default/objects/Quote/fields/Header_Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Header_Distribution_Type__c</fullName>
    <label>Header Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ItemNetTotalPrice</fullName>
            </value>
            <value>
                <fullName>NetUnitPrice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>