force-app/main/default/objects/Quote/fields/Header_Remainder_Amount__c.field-meta.xml
<CustomField>
    <fullName>Header_Remainder_Amount__c</fullName>
    <label>Header Remainder Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>