force-app/main/default/objects/Quote/fields/Install_Place__c.field-meta.xml
<CustomField>
    <fullName>Install_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to where products will be installed</description>
    <inlineHelpText>Select the location where installation services will occur</inlineHelpText>
    <label>Install Place</label>
    <referenceTo>Places__c</referenceTo>
    <relationshipLabel>Quotes (Install Place)</relationshipLabel>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>