force-app/main/default/objects/Quote/fields/Latest_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Effective_End_Date__c</fullName>
    <description>System-calculated field showing the latest end date across all Quote Lines</description>
    <inlineHelpText>This field automatically displays the furthest subscription end date from all Quote Lines</inlineHelpText>
    <label>Latest Effective End Date</label>
    <type>Date</type>
</CustomField>