force-app/main/default/objects/Quote/fields/Legal_Support_Approval__c.field-meta.xml
<CustomField>
    <fullName>Legal_Support_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Support Approval</label>
    <type>Checkbox</type>
</CustomField>