force-app/main/default/objects/Quote/fields/Legal_Support_Justification__c.field-meta.xml
<CustomField>
    <fullName>Legal_Support_Justification__c</fullName>
    <label>Legal Support Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>