force-app/main/default/objects/Quote/fields/License_Extension_Approval__c.field-meta.xml
<CustomField>
    <fullName>License_Extension_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Extension Approval</label>
    <type>Checkbox</type>
</CustomField>