force-app/main/default/objects/Quote/fields/Maintenance_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Discount_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Discount Approval</label>
    <type>Checkbox</type>
</CustomField>