force-app/main/default/objects/Quote/fields/Maintenance_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Max_Discount__c</fullName>
    <label>Maintenance Max Discount</label>
    <summarizedField>QuoteLineItem.Discount</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Fortra_Product_Type__c</field>
        <operation>contains</operation>
        <value>Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>