force-app/main/default/objects/Quote/fields/Manual_Discount__c.field-meta.xml
<CustomField>
    <fullName>Manual_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Manual discount percentage that can be entered by sales users to apply quote-level discounts</description>
    <inlineHelpText>Enter the manual discount percentage to apply to this quote (e.g., enter 10 for 10% discount)</inlineHelpText>
    <label>Manual Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>