force-app/main/default/objects/Quote/fields/Manually_Sent__c.field-meta.xml
<CustomField>
    <fullName>Manually_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows us to filter out renewal quotes in reports that were created and not sent through the system</description>
    <label>Manually Sent</label>
    <type>Checkbox</type>
</CustomField>