force-app/main/default/objects/Quote/fields/Max_Discount_on_QLIs__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_on_QLIs__c</fullName>
    <label>Max Discount on QLIs</label>
    <summarizedField>QuoteLineItem.Discount</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>