force-app/main/default/objects/Quote/fields/Mycap__c.field-meta.xml
<CustomField>
    <fullName>Mycap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Move to Quote with a breakdown to annual costs + specific t&amp;cs for annually paid deals. Also used for commission purposes. Don&apos;t need this on Quote Line.</description>
    <label>Mycap</label>
    <type>Checkbox</type>
</CustomField>