force-app/main/default/objects/Quote/fields/MYCAP_Approval__c.field-meta.xml
<CustomField>
    <fullName>MYCAP_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MYCAP Approval</label>
    <type>Checkbox</type>
</CustomField>