force-app/main/default/objects/Quote/fields/Net_Contract_Change__c.field-meta.xml
<CustomField>
    <fullName>Net_Contract_Change__c</fullName>
    <description>Net financial impact of this amendment, calculated as Amendment ARR Impact minus any Credit Amount issued.</description>
    <formula>Amendment_ARR_Impact__c - Credit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The net financial change resulting from this amendment after credits.</inlineHelpText>
    <label>Net Contract Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>