force-app/main/default/objects/Quote/fields/Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Terms__c</fullName>
    <label>Net Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
                <default>true</default>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
                <isActive>false</isActive>
                <label>Immediate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>