force-app/main/default/objects/Quote/fields/Net_Terms_Approval__c.field-meta.xml
<CustomField>
    <fullName>Net_Terms_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Net Terms Approval</label>
    <type>Checkbox</type>
</CustomField>