force-app/main/default/objects/Quote/fields/Original_Contract_ARR__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_ARR__c</fullName>
    <description>Annual Recurring Revenue from the original contract being amended. Pulled from the linked Renewal Contract.</description>
    <formula>Renewal_Contract__r.Expected_Ren_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current ARR of the contract being amended.</inlineHelpText>
    <label>Original Contract ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>